UtahLiveDataTest/src/objects/ReviewStepApplication__c.object
<CustomObject>
    <description>[Business] Connects the Application/Pre-Application with the User and Review Step via this object</description>
    <fields>
        <fullName>AllocationPercentage__c</fullName>
        <description>Allocation Percentage of Total Fund Value for an application</description>
        <inlineHelpText>Allocation Percentage of Total Fund Value for an application</inlineHelpText>
        <label>Allocation Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountThisAction__c</fullName>
        <description>This field is user entered in the FDM page.</description>
        <label>AmountThisAction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnouncementID__c</fullName>
        <formula>Application__r.Announcement__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnnouncementID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantNotifiedOn__c</fullName>
        <inlineHelpText>When Applicant was notified by email upon Approval/Rejection?</inlineHelpText>
        <label>Applicant Notified On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApplicantNotified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When Applicant was notified by Email upon Approval/Rejection?</inlineHelpText>
        <label>Applicant Notified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <formula>Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationRank__c</fullName>
        <label>Application Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Review Step Applications</relationshipLabel>
        <relationshipName>Review_Step_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AverageScoreNo__c</fullName>
        <label>SME Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageScoreNumber__c</fullName>
        <label>Average Score Number</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageScore__c</fullName>
        <formula>IF(ReviewStepNameFormula__c == &apos;Management Review&apos;, TotalScore__c / NumberOfSMEReviews__c, TotalScore__c  /  NumberOfReviews__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvgScoreNo__c</fullName>
        <formula>AverageScore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AvgScoreNo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DecidedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decided By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Step_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DecidedOn__c</fullName>
        <inlineHelpText>When Approval/Rejection decision was made by the Chair/Review Step Owner?</inlineHelpText>
        <label>Decided On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayAwardAction__c</fullName>
        <formula>NOT(IsLastStep__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayAwardAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FOOwnerName__c</fullName>
        <formula>ReviewStep__r.ReviewGroup__r.Announcement__r.Owner:User.FirstName &amp; &quot; &quot; &amp;  ReviewStep__r.ReviewGroup__r.Announcement__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FO Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalDecisionMade__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>System used field. Used to show whether an application was promoted or approved. If either of status is true, the trigger should skip the logic to change the status based on roll up summaries.</inlineHelpText>
        <label>Final Decision Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundingOpportunityID__c</fullName>
        <formula>HYPERLINK(&quot;/apex/AnnouncementView?id=&quot;+Application__r.Announcement__r.Id,Application__r.Announcement__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funding Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideApproveBtn__c</fullName>
        <formula>NOT(ISPICKVAL(Decision__c,&apos;Pending&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Approve Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAwardCreationButton__c</fullName>
        <formula>IF(
OR(  
ISPICKVAL (Application__r.AwardDecisionStatus__c,&apos;Award Created&apos;), 
ISPICKVAL (Application__r.AwardDecisionStatus__c,&apos;Revision Completed&apos;), 
ISPICKVAL (Application__r.AwardDecisionStatus__c,&apos;Revision Initiated&apos;)
),
TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAwardCreationButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideCompareReviews__c</fullName>
        <description>Only display compare reviews button for Management Review step</description>
        <formula>IF(ReviewStepNameFormula__c != &quot;Management Review&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideCompareReviews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideCreateNegotiationButton__c</fullName>
        <formula>IF( 
OR(
ISPICKVAL (Application__r.AwardDecisionStatus__c,&apos;Award Created&apos;), 
ISPICKVAL (Application__r.AwardDecisionStatus__c,&apos;Revision Completed&apos;), 
ISPICKVAL (Application__r.AwardDecisionStatus__c,&apos;Revision Initiated&apos;)
), 
TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideCreateNegotiationButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>OR(CreatedById &lt;&gt; $User.Id , 
ISPICKVAL( ReviewStep__r.ReviewApprovalStatus__c  ,&apos;Submitted for Approval&apos;),
ISPICKVAL( ReviewStep__r.ReviewApprovalStatus__c  ,&apos;Approved&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFDMActions__c</fullName>
        <formula>OR(
NOT(ISPICKVAL(ReviewStep__r.ReviewApprovalStatus__c,&apos;Approved&apos;)),
ISPICKVAL (Application__r.AwardDecisionStatus__c,&apos;Award Created&apos;),
ISPICKVAL (Application__r.AwardDecisionStatus__c,&apos;Revision Completed&apos;),
ISPICKVAL (Application__r.AwardDecisionStatus__c,&apos;Revision Initiated&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide FDM Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFDMEdit__c</fullName>
        <formula>NOT(ISPICKVAL(ReviewStep__r.ReviewApprovalStatus__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide FDM Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePMDecisionActions__c</fullName>
        <formula>IF ( ReviewStep__r.ReviewGroup__r.Announcement__r.OwnerId == $User.Id , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide PM Decision Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePromoteIcon__c</fullName>
        <formula>NOT(TEXT(Decision__c) = &apos;Approved&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidePromoteIcon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePromote__c</fullName>
        <formula>IF( ISPICKVAL(Decision__c, &apos;Approved&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidePromote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideRejectIcon__c</fullName>
        <formula>NOT(TEXT(Decision__c) = &apos;Rejected&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideRejectIcon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideReject__c</fullName>
        <formula>TEXT(Decision__c) = &apos;Rejected&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideReject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideResendEmail__c</fullName>
        <formula>!( IF( ISPICKVAL(Decision__c, &apos;Approved&apos;) || ISPICKVAL(Decision__c, &apos;Rejected&apos;),true,false) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Resend Email ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSMEReject__c</fullName>
        <formula>ReviewStepFormula__c == &apos;SME Review&apos; || ReviewStep__r.FDMCreated__c=&apos;Yes&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSMEReject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSendReject__c</fullName>
        <formula>ISPICKVAL(ReviewStep__r.ReviewApprovalStatus__c, &apos;Created&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSendReject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsAppPromoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the application is promoted to next reviewStep</description>
        <label>IsAppPromoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLastStep__c</fullName>
        <formula>false</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Last Step ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNotSME__c</fullName>
        <description>Checks if the Review Step is NOT SME Review</description>
        <formula>IF( ReviewStepNameFormula__c != &quot;SME Review&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsNotSME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOGMPromoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overruled By OGM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRSAInODApproval__c</fullName>
        <formula>IF( ReviewStepName__c == &apos;Decision Document&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is RSA In OD Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRSAInOGMApproval__c</fullName>
        <formula>IF (  ReviewStepName__c == &apos;OGM Approval&apos;, true, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is RSA In OGM Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRSAInSDDApproval__c</fullName>
        <formula>IF ( ReviewStepName__c == &apos;SDD Approval&apos;, true, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is RSA In SDD Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReviewScoreAboveThreshold__c</fullName>
        <formula>IF(ISBLANK(ReviewStep__r.ScoringThreshold__c),false,if(ReviewStep__r.ScoringThreshold__c &lt;=  TotalScore__c ,true, true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Review Score Above Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaximumAwardAmount__c</fullName>
        <label>Maximum Award Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MgmtRecAmount__c</fullName>
        <formula>Application__r.MgmtRecAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mgmt Rec Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MinimumAwardAmount__c</fullName>
        <label>Minimum Award Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberOfReviews__c</fullName>
        <label>Number Of Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfSMEReviews__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used only for the management review step, updates upon review update trigger</description>
        <label>NumberOfSMEReviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ODReviewDecision__c</fullName>
        <label>OD Review Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OGMReviewDecision__c</fullName>
        <label>OGM Review Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneStepReviewCompletionStatus__c</fullName>
        <description>One step review statuses for review step application</description>
        <label>OneStepReviewCompletionStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preapplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preapplication</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>Review Step Applications</relationshipLabel>
        <relationshipName>Review_Step_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramPathway__c</fullName>
        <formula>TEXT(Application__r.Announcement__r.Program__r.ProgramPathway__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Pathway</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTitle__c</fullName>
        <formula>Application__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PromotedToFDM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promoted to FDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReadOnlyDecisionAmountThisAction__c</fullName>
        <formula>IF(
OR( 
ISPICKVAL(Application__r.Announcement__r.Program__r.ProgramPathway__c, &apos;Fed-Formula&apos;), 
ISPICKVAL(Application__r.Announcement__r.Program__r.ProgramPathway__c, &apos;State-Formula&apos;), 
ISPICKVAL(Application__r.Announcement__r.Program__r.ProgramPathway__c, &apos;Application 1/12th&apos;), 
ISPICKVAL(Application__r.Announcement__r.Program__r.ProgramPathway__c, &apos;Lump-Sum-App&apos;) 
),&apos;Yes&apos;,&apos;No&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReadOnlyDecisionAmountThisAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecommendedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recommended Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RecommendedFutureAmount__c</fullName>
        <description>Recommended Amount for Future</description>
        <label>Recommended Future Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RejectedApplicantNotified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RejectedApplicantNotified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestedAmount__c</fullName>
        <formula>Application__r.RequestedAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestedBudget__c</fullName>
        <formula>Application__r.TotalFederalMatch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RequestedBudget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReviewStatusJsonString__c</fullName>
        <inlineHelpText>Stores the review id and status in format ID:STATUS#</inlineHelpText>
        <label>Review Status Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewStatusJson__c</fullName>
        <inlineHelpText>Stores the review id and status in format ID:STATUS#</inlineHelpText>
        <label>Review Status Json (Obsolete)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReviewStatus__c</fullName>
        <inlineHelpText>This field holds the record id and status of the review records for the app / preapp in the format as  id:status#id:status</inlineHelpText>
        <label>Reviewer Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewStep1CDecision__c</fullName>
        <label>Review Step 1 Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStep1Decision__c</fullName>
        <label>PreScreen Review Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStep2Decision__c</fullName>
        <label>External Review Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStep3Decision__c</fullName>
        <label>Internal Review Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStepAppFinalDecision__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to True when the revstepapp is promoted to next step or rejected. Refer PromoteApplicationHelper1 and ReviewRejectRedirectHelper classes.</description>
        <label>ReviewStepAppFinalDecision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewStepApplicationFor__c</fullName>
        <formula>IF(NOT(ISBLANK(Application__c)), HYPERLINK(&apos;/&apos;+ Application__c,  Application__r.Name) , HYPERLINK(&apos;/&apos;+ Preapplication__c ,  Preapplication__r.Name) )</formula>
        <label>Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStepApprovalStatusNotApproved__c</fullName>
        <description>Review Approval Status != Approved</description>
        <formula>IF(ReviewStepApprovalStatus__c != &apos;Approved&apos;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewStepApprovalStatusNotApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewStepApprovalStatus__c</fullName>
        <formula>Application__r.Announcement__r.CurrentReviewStepApprovalStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReviewStepApprovalStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStepFormula__c</fullName>
        <formula>ReviewStep__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Step Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStepNameFormula__c</fullName>
        <formula>IF( ISBLANK ( ReviewStepName__c ), ReviewStep__r.Name , ReviewStep__r.Name &amp; &quot;: &quot; &amp; ReviewStepName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStepName__c</fullName>
        <label>Review Step Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewStepNumber__c</fullName>
        <label>Review Step Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReviewStepStatus__c</fullName>
        <description>NOT(ISPICKVAL(ReviewStep__r.Status__c,&apos;In Progress&apos;))</description>
        <formula>IF(OR(IsAppPromoted__c = TRUE, PromotedToFDM__c = TRUE), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Review Step Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewStep__c</fullName>
        <label>Review Step</label>
        <referenceTo>ReviewStep__c</referenceTo>
        <relationshipName>ReviewStepApplications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReviewerDecision__c</fullName>
        <label>Reviewer Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewersCount__c</fullName>
        <description>Reviewers Count</description>
        <label>ReviewersCount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reviewers Not Assigned</fullName>
                    <default>true</default>
                    <label>Reviewers Not Assigned</label>
                </value>
                <value>
                    <fullName>Reviewers Assigned</fullName>
                </value>
                <value>
                    <fullName>Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Reviews Complete</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ThresholdExceeded__c</fullName>
        <formula>IF ((ISNULL(TotalScore__c)) , &apos;&apos;, 
IF((ReviewStep__r.ScoringThreshold__c) == 0,&apos;&apos;,if(ReviewStep__r.ScoringThreshold__c &lt;= TotalScore__c ,&apos;&lt;span&gt; &lt;i class=&quot;fa fa-thumbs-o-up fa-fw fa-lg iconUp&quot; title=&quot;Threshold Exceeded: Yes&quot;/&gt;&lt;/span&gt;&amp;nbsp;&apos;, &apos;&lt;span&gt; &lt;i class=&quot;fa fa-thumbs-o-down fa-fw fa-lg iconDown&quot; title=&quot;Threshold Exceeded: No&quot;/&gt;&lt;/span&gt;&amp;nbsp;&apos; )) 

)</formula>
        <label>Threshold Exceeded?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalReviewsCompleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Reviews Completed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalReviewsInProgress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Reviews In Progress</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalReviewsNotStarted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Reviews Not Started</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalScoreThresholdIcon__c</fullName>
        <formula>IF (ISBLANK(TotalScore__c) , &apos;&apos;,

IF((ReviewStep__r.ScoringThreshold__c) == 0,&apos;&apos;,if(ReviewStep__r.ScoringThreshold__c &lt;= TotalScore__c ,&apos;&lt;span&gt; &lt;i class=&quot;fa fa-thumbs-o-up fa-fw fa-lg  iconUp&quot; title=&quot;Threshold Exceeded: Yes&quot;/&gt;&lt;/span&gt;&amp;nbsp;&apos; &amp; TEXT(TotalScore__c) ,  &apos;&lt;span&gt; &lt;i class=&quot;fa fa-thumbs-o-down fa-fw fa-lg  iconDown&quot; title=&quot;Threshold Exceeded: No&quot;/&gt;&lt;/span&gt;&amp;nbsp;&apos; &amp; TEXT(TotalScore__c)))

)</formula>
        <label>Threshold Exceeded?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalScore__c</fullName>
        <description>This field will store total score of all reviews .</description>
        <inlineHelpText>This field will store total score of all reviews .</inlineHelpText>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Review Step Application</label>
    <nameField>
        <displayFormat>RSA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Review Step Applications</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preapplication</fullName>
        <active>true</active>
        <label>Pre-Application</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allocation_Percentage_Cannot_over_100</fullName>
        <active>true</active>
        <errorConditionFormula>AllocationPercentage__c &gt; 100</errorConditionFormula>
        <errorMessage>Allocation Percentage Cannot over 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AmountThisActionValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AmountThisAction__c &gt; RequestedBudget__c</errorConditionFormula>
        <errorMessage>Amount This Action should not be greater than Requested Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recommended_Amount_Check</fullName>
        <active>false</active>
        <description>Recommended Amount can not be more than Requested Amount</description>
        <errorConditionFormula>If(	RecommendedAmount__c&gt;RequestedAmount__c, true,false)</errorConditionFormula>
        <errorMessage>Recommended Amount can not be more than Requested Amount</errorMessage>
    </validationRules>
</CustomObject>